--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.10.1",
     "express": "^4.11.0",
     "jade": "^1.9.1",
+    "mongoose": "^3.8.23",
     "request": "^2.51.0",
     "simply-deferred": "^3.0.0"
   },
