--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.1",
     "express": "^4.11.0",
+    "express-jwt": "^1.0.0",
     "jade": "^1.9.1",
+    "jsonwebtoken": "^3.2.2",
     "mongoose": "^3.8.23",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
