--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "it-each": "^0.3.0",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
-  }
+    },
+    "engines": {
+      "node": "0.10.x"
+    },
 }
