--- a/site-settings.json
+++ b/site-settings.json
@@ -1,12 +1,19 @@
 {
     "title":"Christopher Vachon",
     "defaults": {
-        "description":"",
-        "keywords":[],
+        "description":"The Blog of Christopher Vachon",
+        "keywords":[
+            "Christopher Vachon",
+            "Christopher Martin Vachon",
+            "Midland Ontario"
+        ],
         "OGImage":""
     },
-    "cssFiles": ["/includes/css/cmv-express.min.css"],
-    "jsFiles": ["//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"],
+    "cssFiles": ["/includes/css/christophervachon-node.min.css"],
+    "jsFiles": [
+        "//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js",
+        "/includes/js/christophervachon-node.min.js"
+    ],
     "icoFiles": ["/includes/favicon.ico"],
     "googleAnalytics": {
         "UACode": "---UA-47031068-2",
