Update Layout and Update Meta Data for Blogs route

--- a/site-settings.json
+++ b/site-settings.json
@@ -7,7 +7,7 @@
             "Christopher Martin Vachon",
             "Midland Ontario"
         ],
-        "OGImage":""
+        "OGImage":"/includes/imgs/me2-300.jpg"
     },
     "cssFiles": ["/includes/css/christophervachon-node.min.css"],
     "jsFiles": [
