--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
   },
   "homepage": "https://github.com/liaodrake/christophervachon-node",
   "dependencies": {
+    "MD5": "^1.2.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.1",
     "express": "^4.11.0",
     "express-jwt": "^1.0.0",
+    "instagram-node": "^0.5.7",
     "jade": "^1.9.1",
     "jsonwebtoken": "^3.2.2",
     "mongoose": "^3.8.23",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
     "request": "^2.51.0",
-    "simply-deferred": "^3.0.0"
+    "simply-deferred": "^3.0.0",
+    "twitter": "^1.2.5"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
